--- a/ghar_dikhao/templates/ghar_dikhao/contact.html
+++ b/ghar_dikhao/templates/ghar_dikhao/contact.html
@@ -21,8 +21,8 @@
    <button type="sumbit" class="btn btn-danger"><i class="fa fa-paper-plane w3-margin-right"></i>send mail</button>
     </form>
     <div class="row">
-        <div class="col-md-6 kk"><i class="fa fa-mobile fa-3x" aria-hidden="true" id="hhs"></i> Phone No :  +917667805624</div>
-        <div class="col-md-6 kk"><i class="fas fa-envelope fa-3x"></i> email : rishav700ranjan@gmail.com</div>
+        <div class="col-md-6 kk w3-row-padding w3-center w3-padding-24"><i class="fa fa-mobile fa-3x" aria-hidden="true" id="hhs"></i> Phone No :  +917667805624</div>
+        <div class="col-md-6 kk w3-row-padding w3-center w3-padding-24"><i class="fas fa-envelope fa-3x"></i> email : rishav700ranjan@gmail.com</div>
         
     </div>
 {% endblock content %}
