--- a/ghar_dikhao/templates/ghar_dikhao/information.html
+++ b/ghar_dikhao/templates/ghar_dikhao/information.html
@@ -10,7 +10,7 @@
 
     <div class="row">
         <div class="col-md-5">
-            <img src="{{form.img.url}}" alt="" width="500" height="365" class="infoimg" />
+            <img src="{{form.img.url}}" alt="" width="500" height="365" class="infoimg" / style="width:100%">
             <h2 class="infoh">{{form.category|upper}}   SPECIFICATION:</h2>
             <div class="row">
                 <div class="col-md-3">
