--- a/ghar_dikhao/static/ghar_dikhao/css/style.css
+++ b/ghar_dikhao/static/ghar_dikhao/css/style.css
@@ -93,7 +93,7 @@ h3{
 @media only screen and (max-width: 600px) {
 
     .myText{
-        color: rgb(17, 50, 235);
+        color:black;
     }
      img{
         max-height: 100px;
