--- a/ghar_dikhao/templates/ghar_dikhao/base.html
+++ b/ghar_dikhao/templates/ghar_dikhao/base.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    {% block style %}
+    {% endblock style %}
 </head>
 <body>
     {% include 'ghar_dikhao/navbar.html' %}
