--- a/ghar_dikhao/templates/ghar_dikhao/foot.html
+++ b/ghar_dikhao/templates/ghar_dikhao/foot.html
@@ -20,12 +20,18 @@
         
     </div>
     <div class="container fot">
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-twitter fa-3x llo"></i>
+        <i class="fab fa-facebook fa-3x llo"></i>
+        <i class="fab fa-instagram fa-3x llo"></i>
+        <i class="fab fa-linkedin fa-3x llo"></i>
     </div>
     
             
+
+</div>
+<div class="row">
+    <div class="col-md-12 col-sm-12 ic kkl">
+        <center>&#169; Rishav Ranjan 2020</center>
+    <div>
 
 </div>
