--- a/ghar_dikhao/templates/ghar_dikhao/information.html
+++ b/ghar_dikhao/templates/ghar_dikhao/information.html
@@ -9,11 +9,11 @@
     {{form.bathroom}}</p {{form.balcony}}</p {{form.cost}}</p {{form.user}}/h5>
 
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 col-sm-12 ic">
             <img src="{{form.img.url}}" alt="" width="500" height="365" class="infoimg" / style="width:100%">
             <h2 class="infoh">{{form.category|upper}}   SPECIFICATION:</h2>
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row col-sm-12 ic">
+                <div class="col-md-3 col-sm-12 ic">
                     <div class="info1">
                         <h4>state:-</h4>
                         <h4>{{form.state}}</h4>
@@ -28,7 +28,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-12 ic">
                     <div class="info12">
                         <h4>bedroom:-</h4>
                         <h4>{{form.bedroom}}</h4>
@@ -47,7 +47,7 @@
 
         </div>
 
-        <div class="col-md-7">
+        <div class="col-md-7 col-sm-12 ic">
             <h3>details</h3>
             <span>
                 <b>
