--- a/ghar_dikhao/templates/ghar_dikhao/navbar.html
+++ b/ghar_dikhao/templates/ghar_dikhao/navbar.html
@@ -1,7 +1,8 @@
 {% load static %}
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
-    <img src="{% static 'ghar_dikhao/images/logo.jpg' %}"  style="width: 8em; height:8em;" class="d-inline-block align-top" alt="bye">
+    <img src="{% static 'ghar_dikhao/images/logoj.jpg' %}"  style="width:100px;" class="d-inline-block align-top" alt="bye">
     
   </a>
   <div class="container-fluid">
@@ -26,14 +27,14 @@
           <a class="nav-link active" aria-current="page" href="{% url 'iskaad' %}">YOUR advertsiment</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="{% url 'iskaadd' %}">advertsiment</a>
+          <a class="nav-link" href="{% url 'iskaadd' %}">Add Advertsiment</a>
         </li>
         {% endif %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'iskaabout' %}">About</a>
+          <a class="nav-link" href="{% url 'iskaabout' %}">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'iskacontact' %}">Contact</a>
+          <a class="nav-link" href="{% url 'iskacontact' %}">Contact Us</a>
         </li>
         
         
@@ -44,6 +45,8 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'iskalogout' %}">Logout</a>
         </li>
+        
+        
         {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'iskasignup' %}">Signup</a>
@@ -52,7 +55,18 @@
           <a class="nav-link" href="{% url 'iskalogin' %}">Login</a>
         </li>
         {% endif %}
+         
+         
+         
       </ul>
+      
     </div>
+    {% if request.user.is_authenticated %} 
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+        <a class="nav-link disabled" href="{% url 'iskalogout' %}"><b class="lo"> Loginned as:   {{request.user}}</b></a>
+        </li>
+      </ul>
+      {% endif %}
   </div>
 </nav>
