--- a/ghar_dikhao/static/ghar_dikhao/css/style.css
+++ b/ghar_dikhao/static/ghar_dikhao/css/style.css
@@ -44,7 +44,6 @@ h3{
     float: left;
     margin: 6%;
     transition: all 0.4s cubic-bezier(0.175,0.885,0,1);
-   
     width: 21.25%;
 }
 
@@ -83,7 +82,6 @@ h3{
 {
     font-size: 1vw;
     font-weight: bold;
-    color:black;
 }
 .ll{
     float: left;
@@ -93,10 +91,33 @@ h3{
 @media only screen and (max-width: 600px) {
 
     .myText{
-        color:black;
+        color: rgb(17, 50, 235);
     }
-     img{
-        max-height: 100px;
-        height: 100%;
+    
+    .fgk{
+        float:none;
+       
+        width: 28rem;
     }
+    .ic{
+        align-items:center;
+        
+    }
+    
+}
+#ji{
+    color: brown;
+}
+#picp{
+    padding-top: 5%;
+    
+}
+.kkl{
+    background-color: chartreuse;
+}
+.llo{
+    padding-right: 2%;
+}
+.lo{
+    color:pink;
 }
