--- a/ghar_dikhao/templates/ghar_dikhao/user_login.html
+++ b/ghar_dikhao/templates/ghar_dikhao/user_login.html
@@ -18,7 +18,7 @@
         
     {% endfor %}
     
-     <button type="sumbit" class="btn btn-primary">sum</button>
+     <button type="sumbit" class="btn btn-primary">LOGIN</button>
     </form>
     </div>
 
