--- a/ghar_dikhao/templates/ghar_dikhao/foot.html
+++ b/ghar_dikhao/templates/ghar_dikhao/foot.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <div class="col-md-4 fg">
+    <div class="col-md-12 col-lg-12 col-sm-12  fg">
         <center><h3>Our Branches</h3></center>
         <center><p class="dk"> Mumbai</p></center>
         <center><p class="dk"> Dhanbad</p></center>
@@ -8,17 +8,7 @@
         <center><p class="dk">Kolkata</p></center>
     </div>
     
-    <div class="col-md-8 kl">
-        <h3>Services</h3>
-        
-        <span>family</span>
-        <span>friends</span>
-        <span>full bed</span>
-        <span>half bed</span>
-        <span>bye</span>
-        <span>tata</span>
-        
-    </div>
+    
     <div class="container fot">
         <i class="fab fa-twitter fa-3x llo"></i>
         <i class="fab fa-facebook fa-3x llo"></i>
