--- a/ghar_dikhao/templates/ghar_dikhao/showselect.html
+++ b/ghar_dikhao/templates/ghar_dikhao/showselect.html
@@ -9,7 +9,7 @@
   <div class="col-md-4 ">
     <form action="{% url 'iskarecent' tit %}">
     {% csrf_token %}
-    <center><button class="btn btn-outline-success my-2 my-sm-0" type="submit">RECENT</center>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">RECENT
       
     </button>
   </form>
