--- a/ghar_dikhao/templates/ghar_dikhao/information.html
+++ b/ghar_dikhao/templates/ghar_dikhao/information.html
@@ -54,7 +54,7 @@
                     <h1>{{form.title}}</h1>
                 </b>
             </span>
-            <p>cost:- $ {{form.cost}}></p>
+            <p>cost:- ₹ {{form.cost}}></p>
             <p>view by:-{{form.view_count}}</p>
             <p>published in:-{{form.date}}</p>
 
@@ -77,7 +77,7 @@
             <h2>CONTACT BUILDER:</h2>
             <div class="info">
                 <h5>Name:- </h5>
-                <h5>{{form.user}}<h5>
+                <h5>{{form.user.extenduser.first_name}} {{form.user.extenduser.last_name}}<h5>
             </div>
             <div class="info">
                 <h5>phone:- </h5>
