--- a/ghar_dikhao/templates/ghar_dikhao/information.html
+++ b/ghar_dikhao/templates/ghar_dikhao/information.html
@@ -54,7 +54,7 @@
                     <h1>{{form.title}}</h1>
                 </b>
             </span>
-            <p>cost:- ₹ {{form.cost}}></p>
+            <p>cost:- ₹ {{form.cost}}</p>
             <p>view by:-{{form.view_count}}</p>
             <p>published in:-{{form.date}}</p>
 
