--- a/ghar_dikhao/templates/ghar_dikhao/base.html
+++ b/ghar_dikhao/templates/ghar_dikhao/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 , shrink-to-fit=no">
     {% load static %}
+    <link rel="icon" href="{% static 'ghar_dikhao/images/titlogo1.jpg' %}" type="image/jpg">
     <link href="{% static 'ghar_dikhao/css/bootstrap.css' %}" rel="stylesheet" >
     <link rel="stylesheet" type="text/css" href='{% static "ghar_dikhao/css/style.css" %}?{% now "U" %}'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
